// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout - snapshot renders correctly with a side panel 1`] = `
<div
  className="ConfigLayout-container-1"
>
  <div
    className="MuiTabs-root-12"
  >
    <div
      className="MuiTabs-flexContainer-13"
    >
      <div
        className="MuiTabs-scroller-15 MuiTabs-fixed-16"
        onScroll={[Function]}
        role="tablist"
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <div
          className="MuiTabs-flexContainer-13"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root-33 MuiTab-root-21 MuiTab-textColorInherit-23 MuiTab-selected-26"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiTab-wrapper-29"
            >
              <span
                className="MuiTab-labelContainer-30"
              >
                <span
                  className="MuiTab-label-31"
                >
                  Design
                </span>
              </span>
            </span>
            <span
              className="MuiTouchRipple-root-39"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-33 MuiTab-root-21 MuiTab-textColorInherit-23"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiTab-wrapper-29"
            >
              <span
                className="MuiTab-labelContainer-30"
              >
                <span
                  className="MuiTab-label-31"
                >
                  Settings
                </span>
              </span>
            </span>
            <span
              className="MuiTouchRipple-root-39"
            />
          </button>
        </div>
        <span
          className="TabIndicator-root-36 TabIndicator-colorPrimary-37 MuiTabs-indicator-20"
          style={
            Object {
              "left": 0,
              "width": 0,
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="ConfigLayout-contentContainer-2"
  >
    <div>
      <div>
        Foo
      </div>
      <div>
        Bar
      </div>
    </div>
  </div>
</div>
`;

exports[`layout - snapshot renders correctly without a side panel 1`] = `
<div
  className="ConfigLayout-container-1"
>
  <div
    className="MuiTabs-root-12"
  >
    <div
      className="MuiTabs-flexContainer-13"
    >
      <div
        className="MuiTabs-scroller-15 MuiTabs-fixed-16"
        onScroll={[Function]}
        role="tablist"
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <div
          className="MuiTabs-flexContainer-13"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root-33 MuiTab-root-21 MuiTab-textColorInherit-23 MuiTab-selected-26"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiTab-wrapper-29"
            >
              <span
                className="MuiTab-labelContainer-30"
              >
                <span
                  className="MuiTab-label-31"
                >
                  Design
                </span>
              </span>
            </span>
            <span
              className="MuiTouchRipple-root-39"
            />
          </button>
        </div>
        <span
          className="TabIndicator-root-36 TabIndicator-colorPrimary-37 MuiTabs-indicator-20"
          style={
            Object {
              "left": 0,
              "width": 0,
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="ConfigLayout-contentContainer-2"
  >
    <div
      className="ConfigLayout-section-7"
    >
      <div
        className="ConfigLayout-sidePanelItems-10"
      >
        <div>
          Foo
        </div>
        <div>
          Bar
        </div>
      </div>
    </div>
    <div
      className="ConfigLayout-section-7"
    >
      <div
        className="ConfigLayout-sidePanelItems-10"
      >
        <div>
          Foo
        </div>
        <div>
          Bar
        </div>
      </div>
    </div>
    <div>
      <div>
        Foo
      </div>
      <div>
        Bar
      </div>
    </div>
  </div>
</div>
`;
